# backend/storage/api-docs/api-docs.json
@@ -1538,7 +1538,7 @@
                 ]
             }
         },
-        "/api/role": {
+        "/api/roles": {
             "get": {
                 "tags": [
                     "Role"
@@ -1689,7 +1689,7 @@
                 ]
             }
         },
-        "/api/role/:id": {
+        "/api/roles/:id": {
             "get": {
                 "tags": [
                     "Role"
